SPRING_BOOT_DEPLOYMENT/k8s-deployment-compose.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parent-project
  name: parent-project
spec:
  # 3 Pods should exist at all times.
  replicas: 1
  selector:
    matchLabels:
      app: parent-project
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: parent-project
    spec:
       imagePullSecrets:
       - name: aig-ecr-secret
       containers:
        - name: api-gateway
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/api-gateway:latest
          imagePullPolicy: Always
        - name: authentication
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/authentication:latest
          imagePullPolicy: Always
        - name: address-service
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/address:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8882
        - name: api-documentation-service
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/api-documentation:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8886
        - name: help-service
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/help:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8883
        - name: notification-service
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/notification:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8884
        - name: transaction-service
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/transaction:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8885
       restartPolicy: Always
    
    
    

---
    
#---
#
#
#apiVersion: apps/v1
#kind: StatefulSet
#metadata:
#  name: parent-project
#spec:
#  serviceName: "parent-project"
#  replicas: 1
#  selector:
#    matchLabels:
#      app: parent-project
#  template:
#    metadata:
#      labels:
#        app: parent-project
#    spec:
#      containers:
#        - name: config-server
#          image: r2553/config-server:latest
#          imagePullPolicy: Always
#          env:
#            - name: EUREKA_SERVER_HOST
#              value: parent-project-0.parent-project
##            - name: SPRING_PROFILES_ACTIVE
##              value: default
##              valueFrom:
##                configMapKeyRef:
##                  name: config-service
##                  key: spring_profile
#            - name: EUREKA_SERVER_ADDRESS
#              value: http://parent-project-0.parent-project:8761/eureka
##              valueFrom:
##                configMapKeyRef:
##                  name: config-service
##                  key: eureka_service_address
#            - name: SERVICE_NAME
#              value: parent-project
#        - name: mysql
#          image: mysql
#          imagePullPolicy: Always
#          env:          
#            - name: MYSQL_ROOT_PASSWORD
#              valueFrom:
#                configMapKeyRef:
#                  name: config-service
#                  key: mysql_password
#        - name: eureka-server
#          image: r2553/eureka-server:latest
#          imagePullPolicy: Always
#          env:
#             - name: SPRING_PROFILES_ACTIVE
#               value: docker
#             - name: EUREKA_SERVER_HOST
#               value: eureka-server
#             - name: SPRING_PROFILES_ACTIVE
#               valueFrom:
#                configMapKeyRef:
#                  name: config-service
#                  key: spring_profile
#             - name: EUREKA_SERVER_ADDRESS
#               valueFrom:
#                configMapKeyRef:
#                  name: config-service
#                  key: eureka_service_address
#             - name: SERVICE_NAME
#               valueFrom:
#                configMapKeyRef:
#                  name: config-service
#                  key: service_name
#

#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  # Unique key of the Service instance
#  name: parent-project
#  labels:
#    app: parent-project
#spec:
#  ports:
#    # Accept traffic sent to port 80
#    - name: eureka-server
#      port: 8761
#      targetPort: 8761
#      
#    - name: http-api-gateway
#      port: 9090
#      targetPort: 9090
#      
#    - name: http-authentication
#      port: 8881
#      targetPort: 8881
#      
#    - name: tcp
#      port: 3306
#      targetPort: 3306
#      
#      
#  selector:
#    # Loadbalance traffic across Pods matching
#    # this label selector
#    app: parent-project
#  # Create an HA proxy in the cloud provider
#  # with an External IP address - *Only supported
#  # by some cloud providers*
#  type: LoadBalancer
#
#

#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  # Unique key of the Service instance
#  name: service-mysql
#  labels:
#    app: service-mysql
#spec:
#  ports:
#    # Accept traffic sent to port 80
#    - name: tcp
#      port: 3306
#      targetPort: 3306
#      
#      
#  selector:
#    # Loadbalance traffic across Pods matching
#    # this label selector
#    app: parent-project
#  # Create an HA proxy in the cloud provider
#  # with an External IP address - *Only supported
#  # by some cloud providers*
#  type: LoadBalancer
#
#
#---


#---
#
#apiVersion: v1
#kind: Secret
#metadata:
#  name: mysql-credentials
#type: Opaque
#data:
#  db_username: root
#  db_password: root
#
