SPRING_BOOT_DEPLOYMENT/k8s-kafka-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  replicas: 1
  serviceName: "kafka"
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.4.4
        command: ["bash", "-c", "unset KAFKA_PORT; /etc/confluent/docker/run"]
        ports:
        - containerPort: 9092
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9092
  type: LoadBalancer
#  externalIPs: 
#    - 192.168.0.10
