SPRING_BOOT_DEPLOYMENT/k8s-stateful-pods.yml



apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: parent-project
spec:
  serviceName: "parent-project"
  replicas: 1
  selector:
    matchLabels:
      app: parent-project
  template:
    metadata:
      labels:
        app: parent-project
    spec:
      imagePullSecrets:
      - name: aig-ecr-secret
      containers:
        - name: config-server
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/config-server:latest
          imagePullPolicy: Always
        - name: eureka-server
          image: 844605633964.dkr.ecr.af-south-1.amazonaws.com/eureka-server:latest
          imagePullPolicy: Always
---



apiVersion: v1
kind: Service
metadata:
  # Unique key of the Service instance
  name: parent-project
  labels:
    app: parent-project
spec:
  ports:
    # Accept traffic sent to port 80
    - name: eureka-server
      port: 8761
      targetPort: 8761
      
    - name: http-api-gateway
      port: 80
      targetPort: 80
      
#    - name: http-authentication
#      port: 8881
#      targetPort: 8881
      
      
      
  selector:
    # Loadbalance traffic across Pods matching
    # this label selector
    app: parent-project
  # Create an HA proxy in the cloud provider
  # with an External IP address - *Only supported
  # by some cloud providers*
  type: LoadBalancer
