SPRING_BOOT_DEPLOYMENT/ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: example-ingress
   annotations:
     ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
   - hosts:
      - developer.aignigeria.com
     secretName: ssl-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "api-doc"
                port:
                  number: 4400
